Fixed some layout issues with the sidenav

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -277,15 +277,20 @@ svg#clouds {
   }
 }
 
-.example-container {
+mat-sidenav {
+  width: 250px;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background: #eee;
 }
 
-mat-sidenav {
-  width: 250px;
+.sidenav-container {
+  flex: 1;
 }
